# Engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: engine.cpp  engine.hpp  loop.cpp  shapes.hpp
src/engine/utilities/: common.h
src/engine/utilities/deltatime/: deltatime.cpp  deltatime.hpp
src/engine/utilities/fps/: fps.cpp  fps.hpp
src/engine/utilities/framemanager/: framemanager.cpp  framemanager.hpp
src/engine/utilities/math/: math.cpp  math.hpp
src/engine/utilities/renderer/: renderer.cpp  renderer.hpp
src/engine/utilities/shaders/: shaders.cpp  shaders.hpp
src/engine/utilities/shapes/2D/rectangle/: rectangle.cpp  rectangle.hpp
